--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,15 @@ body{
     margin: 0;
 }
 
+#lightbox_report textarea{
+    resize: vertical;
+}
+
+#lightbox_report .description{
+    font-size: .9em;
+    margin: 10px 0;
+}
+
 /**** END OF LIGHTBOX *****/
 
 /**** Lightbox_login ******/
@@ -450,7 +459,8 @@ body{
 
 
 #lightbox_login .text_1,
-#lightbox_registration .text_1{
+#lightbox_registration .text_1,
+#lightbox_report .text_1{
     font-size: 20px;
     font-weight: bold;
 }
