--- a/css/details.css
+++ b/css/details.css
@@ -63,6 +63,10 @@
     width: 40px;
 }
 
+.page-buttons .off{
+    background-color: rgba(92, 184, 92, 0.6);
+}
+
 /*** LIGHTBOX ******/
 /* Preload images */
 
